# MY_FIRST_app

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
NUTRIFILL4/: settings.gradle.kts
NUTRIFILL4/app/: build.gradle.kts
app/: build.gradle.kts
app/schemas/com.example.nutrifill.data.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml  README_MATERIAL_COMPONENTS.md
app/src/main/res/drawable/: almonds.xml  avocado.xml  background_gradient.xml  berries.xml  brown_rice.xml  button_background.xml  button_bg.xml  button_ripple.xml  card_bg.xml  chicken_breast.xml  edittext_background.xml  fruits.xml  greek_yogurt.xml  ic_bmi.xml  ic_chart_placeholder.xml  ic_dashboard.xml  ic_food_placeholder.xml  ic_home.xml  ic_logout.xml  ic_menu.xml  ic_notifications.xml  ic_recommendations.xml  ic_report.xml  ic_scan.xml  ic_settings.xml  leafy_greens.xml  lean_meat.xml  lean_protein.xml  milk.xml  nutrient_chart_placeholder.xml  nuts_seeds.xml  oatmeal.xml  progress_bar.xml  quinoa_bowl.xml  rounded_card.xml  (+6 more)
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CODE_REVIEW.md  DEVELOPMENT.md  FINAL_REVIEW.md  NAVIGATION.md  SYSTEM_OVERVIEW.md  TECHNICAL.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: CMakeLists.txt
server/: .env  package-lock.json  package.json
server/config/: config.js  production.js
server/src/: app.js  index.js
server/src/models/: NutritionLog.js  Recommendation.js  Scan.js  User.js
server/src/routes/: auth.js  nutrition.js  scan.js
(+180 files in other folders)
